/***********************************************************************
X3 ChangeLog

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: set exception on error path in emb_get_user.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: extract userNode to Python dictionary conversion for
	future use in handlers.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: do not leak handler objects

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add support for specifying main module in x3.conf

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: Expose Python services module as _svc to follow normal
	Python naming conventions for C extensions.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: Remove unused function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: Generalise cmd_run to handle arbitrary statements.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/main-common.c: Initialise opserv before other services.

2009-09-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* src/recdb.c (explain_failure): When MAIN_LOG is NULL, report to stderr.

2009-09-19  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* src/chanserv.c (handle_part): Allow the current user to be considered for
	channels other than the channel being /part'ed.

	* src/modcmd.c (modcmd_saxdb_write): Write bot modes to the database.
	(modcmd_load_bots): Read them out and use them.

	* src/opserv.c (cmd_whois): Use irc_user_mode_chars() here too.

	* src/opserv.help (INVITE): Document this command.

	* src/proto.h (irc_user_modes): Declare.
	(irc_user_mode_chars): Likewise.

	* src/proto-common.c (irc_user_modes): Define.

	* src/proto-p10.c (irc_user_mode_chars): Define.
	(irc_user): Use irc_user_mode_chars() instead of open-coding it.

2009-08-21  Matthew Beeching  <jobe@mdbnet.co.uk>
